Images to webp, accessibilty

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipiscing elit. Maecenas faucibus mollis interdum festibulum id ligula porta">
 
     <!-- Optional -->
     <meta name="format-detection" content="telephone=no">
@@ -54,10 +55,10 @@
         <div class="col-10 col-md-8 col-lg-4 g-5">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor lectus nibh.</p>
             <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla quis lorem ut libero malesuada feugiat. Lorem ipsum dolor sit</p>
-            <img src="./assets/images/pro-weedeating.jpg" alt="Professional weedeating" class="about-img my-5" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
+            <img src="./assets/images/pro-weedeating.webp" alt="Professional weedeating" class="about-img my-5" loading="lazy" decoding="async" data-aos="fade-right" data-aos-duration="1500">
         </div>
         <div class="col-10 col-md-8 col-lg-4 g-5">
-            <img src="./assets/images/big-mower.jpg" alt="Large professional mower" class="about-img mb-5" loading="lazy" decoding="async" data-aos="fade-left" data-aos-duration="1500">
+            <img src="./assets/images/big-mower.webp" alt="Large professional mower" class="about-img mb-5" loading="lazy" decoding="async" data-aos="fade-left" data-aos-duration="1500">
             <h2 class="display-4 fw-bold pb-2">Our Mission</h2>
             <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Pellentesque in ipsum id orci porta dapibus. Curabitur aliquet quam id dui posuere blandit. Mauris bla</p>
         </div>
@@ -71,45 +72,45 @@
         
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 py-5">
                 <div class="col d-flex align-items-start">
-                    <img src="assets/wheelbarrow.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                    <img src="assets/wheelbarrow.png" alt="" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
                     <div>
-                        <h4 class="fw-bold mb-0">Yard Maintanance & Cleanup</h4>
+                        <p class="h4 fw-bold mb-0">Yard Maintanance & Cleanup</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                     </div>
                 </div>
                 <div class="col d-flex align-items-start">
-                    <img src="./assets/gloves.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                    <img src="./assets/gloves.png" alt="" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
                     <div>
-                        <h4 class="fw-bold mb-0">Patios</h4>
+                        <p class="h4 fw-bold mb-0">Patios</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                     </div>
                 </div>
                 <div class="col d-flex align-items-start">
-                    <img src="assets/sprinkler.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                    <img src="assets/sprinkler.png" alt="" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
                     <div>
-                    <h4 class="fw-bold mb-0">Irrigation Systems</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
+                        <p class="h4 fw-bold mb-0">Irrigation Systems</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                     </div>
                 </div>
                 <div class="col d-flex align-items-start">
-                    <img src="./assets/hose.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                    <img src="./assets/hose.png" alt="" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
                     <div>
-                    <h4 class="fw-bold mb-0">Water Features</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
+                        <p class="h4 fw-bold mb-0">Water Features</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                     </div>
                 </div>
                 <div class="col d-flex align-items-start">
-                    <img src="assets/grass.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                    <img src="assets/grass.png" alt="" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
                     <div>
-                    <h4 class="fw-bold mb-0">Weeding</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
+                        <p class="h4 fw-bold mb-0">Weeding</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                     </div>
                 </div>
                 <div class="col d-flex align-items-start">
-                    <img src="./assets/lawn-mower.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                    <img src="./assets/lawn-mower.png" alt="" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
                     <div>
-                    <h4 class="fw-bold mb-0">Prevention</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
+                        <p class="h4 fw-bold mb-0">Prevention</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                     </div>
                 </div>
             </div>
@@ -124,33 +125,33 @@
                 <div class="carousel-inner py-5 px-4">
                     <div class="carousel-item active">
                         <div class="mb-4">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                         </div>
                         <p class="dark-green px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                         <p class="mt-4 fst-italic fs-5 fw-bold">Customer 1</p>
                     </div>
                     <div class="carousel-item">
                         <div class="mb-4">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                         </div>
                         <p class="dark-green px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <p class="mt-4 fst-italic fs-5 fw-bold">Customer 2</p>
                     </div>
                     <div class="carousel-item">
                         <div class="mb-4">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                            <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                         </div>
                         <p class="dark-green px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p class="mt-4 fst-italic fs-5 fw-bold">Customer 3</p>
