--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipiscing elit. Maecenas faucibus mollis interdum festibulum id ligula porta">
 
     <!-- Optional -->
     <meta name="format-detection" content="telephone=no">
@@ -79,7 +80,7 @@
             <p class="text-uppercase fw-bold py-2">call or text for a free quote</p>
             <p class="display-4 fw-bold light-green pb-5">(270)555-5555</p>
             <p class="text-uppercase fw-bold lh-1">Email</p>
-            <p class="text-uppercase fw-bold light-green lh-1">you@mycompany.com</p>
+            <p class="text-uppercase fw-bold light-green lh-1 h5">you@mycompany.com</p>
         </div>
     </div>
 
