--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipiscing elit. Maecenas faucibus mollis interdum festibulum id ligula porta">
 
     <!-- Optional -->
     <meta name="format-detection" content="telephone=no">
@@ -52,7 +53,7 @@
             <h1 class="display-1 text-white fw-bold">Landscape <br>Maintenance</h1>
         </div>
         <div class="col-10 col-xl-6 offset-xl-3 align-self-end py-5 px-4 bg-light">
-            <span class="light-green fw-bold text-uppercase">Call for a free quote</span>
+            <span class="light-green fw-bold text-uppercase h5">Call for a free quote</span>
             <br>
             <span class="display-3 fw-bold dark-green">(270)555-5555</span>
         </div>
@@ -89,7 +90,7 @@
             <div class="card border-0 m-0 bg-dk-green text-white shadow">
                 <div class="card-body my-5 mx-4 text-center">
                     <img src="./assets/tree.png" class="card-img-top align-self-center m-3" alt="" loading="lazy" decoding="async">
-                    <h5 class="card-title">Residential</h5>
+                    <p class="card-title h5">Residential</p>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="d-flex justify-content-end">
@@ -101,7 +102,7 @@
             <div class="card border-0 m-0 light-green bg-lt-green text-white shadow">
                 <div class="card-body my-5 mx-4 text-center">
                     <img src="./assets/trees.png" class="card-img-top align-self-center m-3" alt="" loading="lazy" decoding="async">
-                    <h5 class="card-title">Commercial</h5>
+                    <p class="card-title h5">Commercial</p>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                 </div>
                 <div class="d-flex justify-content-end">
@@ -118,44 +119,44 @@
     
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 py-5">
             <div class="col d-flex align-items-start">
-                <img src="assets/wheelbarrow.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                <img src="assets/wheelbarrow.png" class="feat-icon mx-3 flex-shrink" alt="" loading="lazy" decoding="async">
                 <div>
-                    <h4 class="fw-bold mb-0">Yard Maintanance & Cleanup</h4>
+                    <p class="h4 fw-bold mb-0">Yard Maintanance & Cleanup</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
-                <img src="./assets/gloves.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                <img src="./assets/gloves.png" class="feat-icon mx-3 flex-shrink" alt="" loading="lazy" decoding="async">
                 <div>
-                    <h4 class="fw-bold mb-0">Patios</h4>
+                    <p class="h4 fw-bold mb-0">Patios</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
-                <img src="assets/sprinkler.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                <img src="assets/sprinkler.png" class="feat-icon mx-3 flex-shrink" alt="" loading="lazy" decoding="async">
                 <div>
-                <h4 class="fw-bold mb-0">Irrigation Systems</h4>
+                <p class="h4 fw-bold mb-0">Irrigation Systems</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
-                <img src="./assets/hose.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                <img src="./assets/hose.png" class="feat-icon mx-3 flex-shrink" alt="" loading="lazy" decoding="async">
                 <div>
-                <h4 class="fw-bold mb-0">Water Features</h4>
+                <p class="h4 fw-bold mb-0">Water Features</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
-                <img src="assets/grass.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                <img src="assets/grass.png" class="feat-icon mx-3 flex-shrink" alt="" loading="lazy" decoding="async">
                 <div>
-                <h4 class="fw-bold mb-0">Weeding</h4>
+                <p class="h4 fw-bold mb-0">Weeding</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
-                <img src="./assets/lawn-mower.png" class="feat-icon mx-3 flex-shrink" loading="lazy" decoding="async">
+                <img src="./assets/lawn-mower.png" class="feat-icon mx-3 flex-shrink" alt="" loading="lazy" decoding="async">
                 <div>
-                <h4 class="fw-bold mb-0">Prevention</h4>
+                <p class="h4 fw-bold mb-0">Prevention</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi</p>
                 </div>
             </div>
@@ -179,33 +180,33 @@
                         <div class="carousel-inner py-5 px-4">
                             <div class="carousel-item active">
                                 <div class="mb-4">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                                 </div>
                                 <p class="dark-green px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                 <p class="mt-4 fst-italic fs-5 fw-bold">Customer 1</p>
                             </div>
                             <div class="carousel-item">
                                 <div class="mb-4">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                                 </div>
                                 <p class="dark-green px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                 <p class="mt-4 fst-italic fs-5 fw-bold">Customer 2</p>
                             </div>
                             <div class="carousel-item">
                                 <div class="mb-4">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                                 </div>
                                 <p class="dark-green px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <p class="mt-4 fst-italic fs-5 fw-bold">Customer 3</p>
@@ -224,7 +225,7 @@
             </div>
         </div>
         <div class="col-10 col-lg-4 py-5 my-auto text-center text-lg-start">
-            <img src="./assets/images/weedeating.jpg" alt="Man trimming grass" class="img-fluid" loading="lazy" decoding="async">
+            <img src="./assets/images/weedeating.webp" alt="Man trimming grass" class="img-fluid" loading="lazy" decoding="async">
         </div>
     </div>
 
