--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipiscing elit. Maecenas faucibus mollis interdum festibulum id ligula porta">
 
     <!-- Optional -->
     <meta name="format-detection" content="telephone=no">
@@ -55,7 +56,7 @@
             <div class="card border-0 m-0 bg-dk-green text-white shadow" data-aos="flip-left" data-aos-duration="1500">
                 <div class="card-body my-5 mx-4 text-center">
                     <img src="./assets/tree.png" class="card-img-top align-self-center m-3" alt="" loading="lazy" decoding="async">
-                    <h5 class="card-title">Residential</h5>
+                    <p class="h5 card-title">Residential</p>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
 
@@ -101,7 +102,7 @@
             <div class="card border-0 m-0 light-green bg-lt-green text-white shadow" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500">
                 <div class="card-body my-5 mx-4 text-center">
                     <img src="./assets/trees.png" class="card-img-top align-self-center m-3" alt="" loading="lazy" decoding="async">
-                    <h5 class="card-title">Commercial</h5>
+                    <p class="h5 card-title">Commercial</p>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                 </div>
 
@@ -152,7 +153,7 @@
         <div class="row g-5 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon">
-            <img src="./assets/mower-color.png" alt="" loading="lazy" decoding="async">
+            <img src="./assets/mower-color.png" alt="" loading="lazy" decoding="async" height="64px" width="64px">
                 </div>
                 <p class="text-uppercase fw-bold py-2">Yard Maintenance & Cleanup</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi, leo ultrices lacinia ornare massa</p>
@@ -162,7 +163,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon">
-                <img src="./assets/tree-color.png" alt="" loading="lazy" decoding="async">
+                <img src="./assets/tree-color.png" alt="" loading="lazy" decoding="async" height="64px" width="64px">
                 </div>
                 <p class="text-uppercase fw-bold py-2">Full Tree Service</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi, leo ultrices lacinia ornare massa</p>
@@ -172,7 +173,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon">
-                <img src="./assets/ant-color.png" alt="" loading="lazy" decoding="async">
+                <img src="./assets/ant-color.png" alt="" loading="lazy" decoding="async" height="64px" width="64px">
                 </div>
                 <p class="text-uppercase fw-bold py-2">Rodent & Insect Control</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam ante velit facilisi, leo ultrices lacinia ornare massa</p>
@@ -188,39 +189,39 @@
     <div class="container bg-white my-5">
         <div class="row row-cols-2 row-cols-md-3 align-items-center justify-content-center">
             <div class="col p-5 text-center box">
-                <img src="assets/wheelbarrow.png" class="md-icon mx-auto" loading="lazy" decoding="async">
+                <img src="assets/wheelbarrow.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
-                    <h4 class="fw-bold mb-0">Yard Maintanance & Cleanup</h4>
+                    <p class="h4 fw-bold mb-0">Yard Maintanance & Cleanup</p>
                 </div>
             </div>
             <div class="col p-5 text-center box">
-                <img src="./assets/gloves.png" class="md-icon mx-auto" loading="lazy" decoding="async">
+                <img src="./assets/gloves.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
-                    <h4 class="fw-bold mb-0">Patios</h4>
+                    <p class="h4 fw-bold mb-0">Patios</p>
                 </div>
             </div>
             <div class="col p-5 text-center box">
-                <img src="assets/sprinkler.png" class="md-icon mx-auto" loading="lazy" decoding="async">
+                <img src="assets/sprinkler.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
-                    <h4 class="fw-bold mb-0">Irrigation Systems</h4>
+                    <p class="h4 fw-bold mb-0">Irrigation Systems</p>
                 </div>
             </div>
             <div class="col p-5 text-center box">
-                <img src="./assets/hose.png" class="md-icon mx-auto" loading="lazy" decoding="async">
+                <img src="./assets/hose.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
-                    <h4 class="fw-bold mb-0">Water Features</h4>
+                    <p class="h4 fw-bold mb-0">Water Features</p>
                 </div>
             </div>
             <div class="col p-5 text-center box">
-                <img src="assets/grass.png" class="md-icon mx-auto" loading="lazy" decoding="async">
+                <img src="assets/grass.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
-                <h4 class="fw-bold mb-0">Weeding</h4>
+                <p class="h4 fw-bold mb-0">Weeding</p>
                 </div>
             </div>
             <div class="col p-5 text-center box">
-                <img src="./assets/lawn-mower.png" class="md-icon mx-auto" loading="lazy" decoding="async">
+                <img src="./assets/lawn-mower.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
-                    <h4 class="fw-bold mb-0">Prevention</h4>
+                    <p class="h4 fw-bold mb-0">Prevention</p>
                 </div>
             </div>
         </div>
@@ -234,11 +235,11 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 py-5">
             <div class="col my-5 py-5" data-aos="fade-down" data-aos-duration="1000">
                 <div class="mb-4">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                 </div>
                 <p class="dark-green">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 <p class="mt-4 fst-italic fs-5 fw-bold">
@@ -248,22 +249,22 @@
             </div>
             <div class="col my-5 py-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="500">
                 <div class="mb-4">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                 </div>
                 <p class="dark-green">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <p class="mt-4 fst-italic fs-5 fw-bold">Customer 2</p>
             </div>
             <div class="col my-5 py-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000">
                 <div class="mb-4">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                    <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
                 </div>
                 <p class="dark-green">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <p class="mt-4 fst-italic fs-5 fw-bold">Customer 3</p>
