--- a/testimonials.html
+++ b/testimonials.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipiscing elit. Maecenas faucibus mollis interdum festibulum id ligula porta">
 
     <!-- Optional -->
     <meta name="format-detection" content="telephone=no">
@@ -56,11 +57,11 @@
     <div class="col-10 col-md-8 col-lg-6 py-5 px-4 mx-auto text-center">
         <div class="my-5 py-5" data-aos="flip-left" data-aos-duration="1500">
             <div class="mb-4">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
             </div>
             <p class="dark-green">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <p class="mt-4 fst-italic fs-5 fw-bold">
@@ -70,22 +71,22 @@
         </div>
         <div class="my-5 py-5" data-aos="flip-left" data-aos-duration="1500">
             <div class="mb-4">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/half-star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
             </div>
             <p class="dark-green">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p class="mt-4 fst-italic fs-5 fw-bold">Customer 2</p>
         </div>
         <div class="my-5 py-5" data-aos="flip-left" data-aos-duration="1500">
             <div class="mb-4">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
-                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
+                <img src="assets/star.png" alt="" loading="lazy" decoding="async" height="30px" width="30px">
             </div>
             <p class="dark-green">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <p class="mt-4 fst-italic fs-5 fw-bold">Customer 3</p>
